Address a race condition when triggering banners from devtools.

The app banner pipeline sets a flag variable checking whether or not
sufficient engagement has been achieved to trigger the banner. However,
if devtools is used to trigger the banner, the flag variable may have
never been set to true depending on when the devtools triggering
happened.

This CL addresses the race by changing the engagement check to also
consider whether or not we are in debug mode. If IsDebugMode() is true,
then we always consider there to be sufficient engagement to trigger the
banner.

BUG=739344

Change-Id: I55d999585e3155042b884e39d23cf557ae9d8c18
Reviewed-on: https://chromium-review.googlesource.com/677901
Reviewed-by: Peter Beverloo <peter@chromium.org>
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503693}
Former-commit-id: 0622adc1c5f32cca3c719e0eba760a5c4b161246